<resources>
    <string name="app_name">NoiseAlert</string>


    <string name="apresentacao_text_view_top">Não deixe nada atrapalhar você</string>
    <string name="principal_text_view_ligado">Microfone Ligado</string>
    <string name="principal_text_view_desligado"> Microfone Desligado</string>

    <string name="sobre_nos_subtitulo">Manage the environment noise</string>

    <string name="sobre_nos_conteudo"> Noise Alert helps you controlling the noise in a variety os environments, as Classrooms, Libraries, Meeting Rooms and others.
\n \nNoise Alert allows you define the limit of the audio in an environment and control noise around you.
        \n  \nGustavo Mota, founder of WeDoLogos, is the idealist of the app and Your Dev is the partner who transformed the idea in an app. </string>
    <string name="activity_configuracoes_titulo">Configurações</string>

    <string name="activity_configuracoes_modo_som_titulo">Selected Alert</string>
    <string name="sobre_nos">About Us</string>
    <string name="activity_configuracoes_vibrar">Vibrate while Playing</string>
    <string name="activity_configuracoes_duracao_alarme">Alert Time</string>
    <string name="activity_configuracoes_buscar_toque">Search other alerts</string>
    <string name="activity_configuracoes_gravar_toque">Record an Alert</string>

    <string name="activity_configuracoes_modo_som_titulo_dialog">Select an Alert</string>


    <string name="activity_configuracoes_modo_som_subtitulo">Default</string>
    <string name="activity_configuracoes_modo_som_subtitulo_alternativa">Alternative</string>
    <string name="activity_configuracoes_modo_som_subtitulo_crazy">Vibrate mode</string>
    <string name="activity_configuracoes_modo_som_subtitulo_personalizado">Personalizado</string>


    <string name="activity_configuracoes_volume">Volume</string>


    <string name="activity_configuracoes_buscar_toque_pop_up">Your searched alert</string>
    <string name="activity_configuracoes_gravar_toque_pop_up">Your recorded alert</string>

    <string name="activity_configuracoes_tempo_toque">Alert Time</string>
    <string name="dialog_toque_salvo">Your alert is saved in Selected Alert.</string>

    <string name="titulo_notificao_on">Noise Alert On</string>

    <string name="texto_notificacao">We are managing your environment</string>



    <string name="salvar">Save</string>
    <string name="cancelar">Cancel</string>


    <string name="titulo_configuracoes">Settings</string>
    <string name="principal_volume_ambiente">Environment noise</string>
    <string name="principal_sensibilidade_microfone">Sensibility of the mic</string>

    <string name="em_desenvolvimento">We are still developing to you</string>

    <string name="settings_termos_de_uso">Terms of use</string>

    <string name="termos_de_uso"> </string>
    <string name="version"> Version: </string>


</resources>
