

<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/contraint_fundo"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:background="@drawable/color_degrade_activity_config_item"
    tools:context=".Activity.Activity_Principal">


    <TextView
        android:id="@+id/textView18"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/color_degrade_activity_config_linha"
        app:layout_constraintBottom_toBottomOf="@+id/constraintLayout4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout4" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="@drawable/color_degrade_activity_config_linha"
        app:layout_constraintBottom_toBottomOf="@+id/constraintLayout6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <android.support.constraint.ConstraintLayout
        android:id="@+id/constraintLayout6"
        android:layout_width="0dp"
        android:layout_height="70dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity_buscar_toque_constraint">

        <TextView
            android:id="@+id/textView12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="28dp"
            android:layout_marginTop="8dp"
            android:text="Gravar Toque"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.3" />
    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/activity_configuracoes_vibracao"
        android:layout_width="0dp"
        android:layout_height="70dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout6">

        <TextView
            android:id="@+id/activity_configuracoes_text_view_vibracao"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="28dp"
            android:layout_marginTop="8dp"
            android:text="Vibrar enquanto toca "
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.3" />

        <Switch
            android:id="@+id/activity_configuracoes_switch_vibracao"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginEnd="25dp"

            android:theme="@style/SwitchCompatStyle"
            app:layout_constraintBottom_toBottomOf="@+id/activity_configuracoes_text_view_vibracao"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/activity_configuracoes_text_view_vibracao" />
    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/constraintLayout4"
        android:layout_width="0dp"
        android:layout_height="70dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity_volume_constraint">


        <TextView
            android:id="@+id/textView13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="28dp"
            android:layout_marginTop="8dp"
            android:text="Idioma do app"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.3" />

        <TextView
            android:id="@+id/textView14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="25dp"
            android:layout_marginTop="8dp"
            android:text="PT-BR"
            app:layout_constraintBottom_toBottomOf="@+id/textView13"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/textView13" />
    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/activity_volume_constraint"
        android:layout_width="0dp"
        android:layout_height="70dp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity_configuracoes_vibracao">

        <TextView
            android:id="@+id/activity_configuracoes_text_view_volume"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="28dp"
            android:layout_marginTop="8dp"
            android:text="@string/activity_configuracoes_volume"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.3" />
    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.16" />

    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/activity_principal_layout_top"
        android:layout_width="0dp"

        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="20dp"
            android:text="@string/activity_configuracoes_titulo"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/activity_config_return" />

        <ImageButton
            android:id="@+id/activity_config_menu_sobre_nos"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginEnd="16dp"
            android:adjustViewBounds="false"
            android:background="@mipmap/menu_black"
            android:cropToPadding="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.3" />

        <ImageButton
            android:id="@+id/activity_config_return"

            android:layout_width="35dp"

            android:layout_height="35dp"

            android:layout_marginStart="16dp"
            android:background="@mipmap/next_left"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.3" />
    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/activity_configuracoes_modo_som_contrastraint"
        android:layout_width="0dp"
        android:layout_height="70dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline">

        <TextView
            android:id="@+id/activity_configuracoes_modo_som_text_view"
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="28dp"
            android:layout_marginTop="8dp"
            android:text="@string/activity_configuracoes_modo_som_titulo"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.3" />

        <TextView
            android:id="@+id/activity_configuracoes_modo_som_subtitulo"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:text="@string/activity_configuracoes_modo_som_subtitulo"
            app:layout_constraintStart_toStartOf="@+id/activity_configuracoes_modo_som_text_view"
            app:layout_constraintTop_toBottomOf="@+id/activity_configuracoes_modo_som_text_view" />

        <ImageView
            android:id="@+id/activity_configuracoes_modo_som_image_view"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginBottom="4dp"
            android:layout_marginEnd="25dp"
            android:layout_marginTop="4dp"
            app:layout_constraintBottom_toBottomOf="@+id/activity_configuracoes_modo_som_subtitulo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/activity_configuracoes_modo_som_text_view"
            app:srcCompat="@mipmap/next" />
    </android.support.constraint.ConstraintLayout>


    <android.support.constraint.ConstraintLayout
        android:id="@+id/activity_buscar_toque_constraint"
        android:layout_width="0dp"
        android:layout_height="70dp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity_configuracoes_modo_som_contrastraint">

        <TextView
            android:id="@+id/activity_configuracoes_text_view_buscar_toque"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="28dp"
            android:layout_marginTop="8dp"
            android:text="@string/activity_configuracoes_buscar_toque"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.3" />

        <TextView
            android:id="@+id/activity_configuracoes_buscar_toque_sub_titulo"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            app:layout_constraintStart_toStartOf="@+id/activity_configuracoes_text_view_buscar_toque"
            app:layout_constraintTop_toBottomOf="@+id/activity_configuracoes_text_view_buscar_toque" />
    </android.support.constraint.ConstraintLayout>

    <TextView
        android:id="@+id/textView21"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="@drawable/color_degrade_activity_config_linha"
        app:layout_constraintBottom_toTopOf="@+id/activity_buscar_toque_constraint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="@drawable/color_degrade_activity_config_linha"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/constraintLayout6" />

    <TextView
        android:id="@+id/textView20"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="@drawable/color_degrade_activity_config_linha"
        app:layout_constraintBottom_toBottomOf="@+id/activity_configuracoes_vibracao"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/activity_volume_constraint" />

    <TextView
        android:id="@+id/textView19"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="@drawable/color_degrade_activity_config_linha"
        app:layout_constraintBottom_toBottomOf="@+id/activity_volume_constraint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />


</android.support.constraint.ConstraintLayout>